// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContractCode.vue > Should display contract verification info if public explorer and verified 1`] = `
"<div data-v-39109da1="">
  <!--v-if-->
  <contract-verification-info-stub data-v-39109da1="" contract="[object Object]"></contract-verification-info-stub>
  <h4 data-v-39109da1="" class="mb-1">ABI</h4>
  <div data-v-39109da1="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div data-v-39109da1="" class="v-card-text text-medium-emphasis bg-grey-lighten-4">
      <div data-v-130fe57e="" data-v-39109da1="" class="expandable-text">
        <div data-v-130fe57e="" class="d-block overflow-auto pr-10" style="white-space: pre-wrap;"><pre data-v-130fe57e="" style="white-space: pre-wrap;">[
  {
    "inputs": [
      {
        "internalType": "string",
        "name": "baseURI",
        "...</pre>
        </div>
        <div data-v-130fe57e="" class="copy-btn-container"><button data-v-130fe57e="" type="button" class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-small v-btn--variant-text" aria-describedby="v-tooltip-2"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i data-v-130fe57e="" class="mdi-content-copy mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
            <!---->
            <!--teleport start-->
            <!--teleport end-->
          </button></div><!-- Toggle button -->
        <div data-v-130fe57e="" class="text-center mt-2"><a data-v-130fe57e="" href="#" class="no-decoration text-uppercase d-flex align-center justify-center"><i data-v-130fe57e="" class="mdi-eye mdi v-icon notranslate v-theme--light v-icon--size-small mr-1" aria-hidden="true"></i> VIEW ALL</a></div><!-- Hidden input for fallback copy method --><input data-v-130fe57e="" type="hidden" value="[
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;baseURI&quot;,
        &quot;type&quot;: &quot;string&quot;
      },
      {
        &quot;components&quot;: [
          {
            &quot;internalType&quot;: &quot;string&quot;,
            &quot;name&quot;: &quot;targetURI&quot;,
            &quot;type&quot;: &quot;string&quot;
          },
          {
            &quot;internalType&quot;: &quot;string[]&quot;,
            &quot;name&quot;: &quot;tagStrings&quot;,
            &quot;type&quot;: &quot;string[]&quot;
          },
          {
            &quot;internalType&quot;: &quot;bool&quot;,
            &quot;name&quot;: &quot;enrich&quot;,
            &quot;type&quot;: &quot;bool&quot;
          },
          {
            &quot;internalType&quot;: &quot;uint256&quot;,
            &quot;name&quot;: &quot;number&quot;,
            &quot;type&quot;: &quot;uint256&quot;
          }
        ],
        &quot;internalType&quot;: &quot;struct NFTCollectible.jsonObject&quot;,
        &quot;name&quot;: &quot;obj&quot;,
        &quot;type&quot;: &quot;tuple&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;constructor&quot;
  },
  {
    &quot;anonymous&quot;: false,
    &quot;inputs&quot;: [
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;owner&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;approved&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;Approval&quot;,
    &quot;type&quot;: &quot;event&quot;
  },
  {
    &quot;anonymous&quot;: false,
    &quot;inputs&quot;: [
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;owner&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;operator&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;indexed&quot;: false,
        &quot;internalType&quot;: &quot;bool&quot;,
        &quot;name&quot;: &quot;approved&quot;,
        &quot;type&quot;: &quot;bool&quot;
      }
    ],
    &quot;name&quot;: &quot;ApprovalForAll&quot;,
    &quot;type&quot;: &quot;event&quot;
  },
  {
    &quot;anonymous&quot;: false,
    &quot;inputs&quot;: [
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;previousOwner&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;newOwner&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;name&quot;: &quot;OwnershipTransferred&quot;,
    &quot;type&quot;: &quot;event&quot;
  },
  {
    &quot;anonymous&quot;: false,
    &quot;inputs&quot;: [
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;from&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;to&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;indexed&quot;: true,
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;Transfer&quot;,
    &quot;type&quot;: &quot;event&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;MAX_PER_MINT&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;MAX_SUPPLY&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;PRICE&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;to&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;approve&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;owner&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;name&quot;: &quot;balanceOf&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;baseTokenURI&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;string&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;defaultTokenURI&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;string&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;getApproved&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;owner&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;operator&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;name&quot;: &quot;isApprovedForAll&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;bool&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;bool&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;_count&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;mintNFTs&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;payable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;name&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;string&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;owner&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;ownerOf&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;renounceOwnership&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;reserveNFTs&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;from&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;to&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;safeTransferFrom&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;from&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;to&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      },
      {
        &quot;internalType&quot;: &quot;bytes&quot;,
        &quot;name&quot;: &quot;data&quot;,
        &quot;type&quot;: &quot;bytes&quot;
      }
    ],
    &quot;name&quot;: &quot;safeTransferFrom&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;operator&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;bool&quot;,
        &quot;name&quot;: &quot;approved&quot;,
        &quot;type&quot;: &quot;bool&quot;
      }
    ],
    &quot;name&quot;: &quot;setApprovalForAll&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;_baseTokenURI&quot;,
        &quot;type&quot;: &quot;string&quot;
      }
    ],
    &quot;name&quot;: &quot;setBaseURI&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;bytes4&quot;,
        &quot;name&quot;: &quot;interfaceId&quot;,
        &quot;type&quot;: &quot;bytes4&quot;
      }
    ],
    &quot;name&quot;: &quot;supportsInterface&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;bool&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;bool&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;symbol&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;string&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;index&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;tokenByIndex&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;owner&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;index&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;tokenOfOwnerByIndex&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;tokenURI&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;string&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;string&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;_owner&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;name&quot;: &quot;tokensOfOwner&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256[]&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256[]&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;totalSupply&quot;,
    &quot;outputs&quot;: [
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;stateMutability&quot;: &quot;view&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;from&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;to&quot;,
        &quot;type&quot;: &quot;address&quot;
      },
      {
        &quot;internalType&quot;: &quot;uint256&quot;,
        &quot;name&quot;: &quot;tokenId&quot;,
        &quot;type&quot;: &quot;uint256&quot;
      }
    ],
    &quot;name&quot;: &quot;transferFrom&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [
      {
        &quot;internalType&quot;: &quot;address&quot;,
        &quot;name&quot;: &quot;newOwner&quot;,
        &quot;type&quot;: &quot;address&quot;
      }
    ],
    &quot;name&quot;: &quot;transferOwnership&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;nonpayable&quot;,
    &quot;type&quot;: &quot;function&quot;
  },
  {
    &quot;inputs&quot;: [],
    &quot;name&quot;: &quot;withdraw&quot;,
    &quot;outputs&quot;: [],
    &quot;stateMutability&quot;: &quot;payable&quot;,
    &quot;type&quot;: &quot;function&quot;
  }
]">
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
  <h4 data-v-39109da1="" class="mb-1">Bytecode</h4>
  <div data-v-39109da1="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div data-v-39109da1="" class="v-card-text text-medium-emphasis bg-grey-lighten-4">
      <div data-v-130fe57e="" data-v-39109da1="" class="expandable-text">
        <div data-v-130fe57e="" class="d-block overflow-auto pr-10" style="white-space: pre-wrap;"><pre data-v-130fe57e="" style="white-space: pre-wrap;">0x60</pre>
        </div>
        <div data-v-130fe57e="" class="copy-btn-container"><button data-v-130fe57e="" type="button" class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-small v-btn--variant-text" aria-describedby="v-tooltip-3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i data-v-130fe57e="" class="mdi-content-copy mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
            <!---->
            <!--teleport start-->
            <!--teleport end-->
          </button></div><!-- Toggle button -->
        <!--v-if-->
        <!-- Hidden input for fallback copy method --><input data-v-130fe57e="" type="hidden" value="0x60">
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
  <h4 data-v-39109da1="" class="mb-1">Assembly</h4>
  <div data-v-39109da1="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div data-v-39109da1="" class="v-card-text">
      <div data-v-39109da1="" class="hljs">highlighted</div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ContractCode.vue > Should display the contract verification panel for public explorers 1`] = `
"<div data-v-39109da1="">
  <!--v-if-->
  <contract-verification-stub data-v-39109da1=""></contract-verification-stub>
  <!--v-if-->
  <h4 data-v-39109da1="" class="mb-1">Bytecode</h4>
  <div data-v-39109da1="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div data-v-39109da1="" class="v-card-text text-medium-emphasis bg-grey-lighten-4">
      <div data-v-130fe57e="" data-v-39109da1="" class="expandable-text">
        <div data-v-130fe57e="" class="d-block overflow-auto pr-10" style="white-space: pre-wrap;"><pre data-v-130fe57e="" style="white-space: pre-wrap;">0x60</pre>
        </div>
        <div data-v-130fe57e="" class="copy-btn-container"><button data-v-130fe57e="" type="button" class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-small v-btn--variant-text" aria-describedby="v-tooltip-1"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i data-v-130fe57e="" class="mdi-content-copy mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
            <!---->
            <!--teleport start-->
            <!--teleport end-->
          </button></div><!-- Toggle button -->
        <!--v-if-->
        <!-- Hidden input for fallback copy method --><input data-v-130fe57e="" type="hidden" value="0x60">
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
  <h4 data-v-39109da1="" class="mb-1">Assembly</h4>
  <div data-v-39109da1="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div data-v-39109da1="" class="v-card-text">
      <div data-v-39109da1="" class="hljs">highlighted</div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ContractCode.vue > Should not display the contract verification panel if not public explorer 1`] = `
"<div data-v-39109da1="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div data-v-39109da1="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div data-v-39109da1="" class="v-card-text"> No bytecode for this contract. Redeploy to upload it. </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
  <div data-v-39109da1="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mb-6">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div data-v-39109da1="" class="v-card-text"> No assembly for this contract. Redeploy to upload it. </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
